...
    <string name="could_not_load_widget">Unable to load widget</string>
    <string name="remove_widget">Remove widget</string>

    <string name="close">Close</string>
    <string name="applications">Apps</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>

    <string name="requires_contact_permission">
        Access to contacts is required to search and call them.
    </string>

    <string name="grant_permission">Grant permission</string>
...
    <string name="title_view_github_repo">Tap to view code</string>
    <string name="title_status_bar">Status Bar</string>
    <string name="show_hide_status_bar">Show/Hide status bar</string>
    <string name="more_from_jeerovan">More from Jeerovan</string>
    <string name="fife_subtitle">Encrypted Cloud Storage</string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="home_workspace">Workspace</string>
    <string name="workspace_notes">Notes</string>
    <string name="workspace_tasks">Tasks</string>
    <string name="workspace_notes_coming_soon">Notes is coming soon</string>
    <string name="title_glass_effect">Glass effect</string>
    <string name="widget_resize_height">Resize %1$s height</string>
    <string name="widget_reset_height">Reset height</string>
</resources>

